# django-boundfield-renderer

./: .gitignore  LICENSE  README.md  RELEASES.md  setup.cfg
boundfield_renderer/: __init__.py  apps.py  registry.py  utils.py
boundfield_renderer/registries/: __init__.py  bootstrap4.py  default.py
boundfield_renderer/templates/bootstrap4/: errors.html  form-check.html  form-group.html  help_text.html  widget_fixed_value.html  widget_inline_range.html
boundfield_renderer/templates/bootstrap4/base/: attributes.html  check.html  checkbox.html  file.html  help_text.html  input.html  input_attributes.html  (+6 more)
boundfield_renderer/templatetags/: boundfield_renderer.py
formrenderer/: __init__.py  registry.py
formrenderer/registries/: default.py
formrenderer/templates/default/: errors.html  field.html  form.html  top_errors.html
formrenderer/templatetags/: formrenderer.py
tests/: form_fields.py  forms.py  manage.py  settings.py  test_builtin.py  test_custom.py  test_default.py  test_form.html  urls.py  views.py  wsgi.py
tests/forms/: __init__.py  builtin_form.py  configurable_form.py  custom_fields.py  custom_form.py
tests/templates/: index.html  menu.html  test_form.html
tests/templates/bootstrap4/: compare_form.html  display_form.html  form.html  toperrors.html
tests/templates/builtin/: compare_form.html  form.html
tests/templates/custom/: error_list.html  form.html  my_field.html  my_other_char_field.html
tests/templates/default/: compare_form.html  display_form.html  form.html  my_field.html  top_errors.html
tests/templatetags/: toperrors.py
(+11 files in other folders)
