[metadata]
name = django-boundfield-renderer
version = attr: boundfield_renderer.__version__
license = MIT
license_file = LICENSE
description = A rendering engine for Django forms using templatetags
long_description = file: README.md
long_description_content_type = text/markdown
author = Benjamin Mampaey
author_email = bmampaey@gmail.com
url = https://github.com/bmampaey/django-boundfield-renderer
download_url = https://github.com/bmampaey/django-boundfield-renderer/tarball/master
platform = any
keywords =
	django
	form

classifiers =
	Development Status :: 4 - Beta
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.0
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages =
	boundfield_renderer
	boundfield_renderer.templatetags
	boundfield_renderer.registries

python_requires = >= 3.5

setup_requires =
	setuptools >= 38.3.0

install_requires =
	Django >= 2.0

include_package_data = True

[options.package_data]
boundfield_renderer = templates/**/*.html

[bdist_wheel]
universal = True
